[project]
name = "theads2yt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
    "selenium>=4.37.0",
    "selenium-wire>=5.1.0",
    "webdriver-manager>=4.0.2",
    "yt-dlp>=2025.10.14",
    "blinker==1.7.0",
    "setuptools>=80.9.0",
    "zstandard>=0.25.0",
    "tabulate>=0.9.0",
    "google-generativeai>=0.8.5",
    "zstd>=1.5.7.2",
    "schedule>=1.2.2",
    "datasette>=0.65.1",
    "datasette-auth-passwords>=1.1.1",
]
